creating transaction display element logic works

--- a/apiTemplates/display.html
+++ b/apiTemplates/display.html
@@ -1,2 +1,7 @@
 {{ block "TransDispl" . }}
+<div>
+    <p>{{ .Desc }}</p>
+    <p>{{ .Amount }}</p>
+    <button hx-delete="/api/delTrans" name="{{ .Id}}">Delete</button>
+</div>
 {{ end }}
