displaying all data fetched from the db works

--- a/apiTemplates/display.html
+++ b/apiTemplates/display.html
@@ -5,3 +5,10 @@
     <button hx-delete="/api/delTrans" name="{{ .Id}}">Delete</button>
 </div>
 {{ end }}
+
+
+{{ block "DispAllTas" . }}
+    {{ range . }}
+        {{ template "TransDispl" .}}
+    {{ end }}
+{{ end }}
