--- a/pages/shared.html
+++ b/pages/shared.html
@@ -1,3 +1,4 @@
 {{ block "Head" . }}
 <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+<script src="files/js/main.js" defer></script>
 {{ end }}
